--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,87 +1,405 @@
-*{
-    padding: 0px;
+
+#first-container {
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  
 }
-#first-container{
-   background-color: black;
-   width: 87%;
+.header-container {
+  display: flex;
+  background-color: rgb(248, 236, 246);
+  justify-content: space-around;
+  align-items: center;
+  
 }
-.header-container{
-    display: flex;
-    background-color:rgb(255, 238, 0);
-    justify-content: space-around;
-    
-    
+.log {
+  color: red;
+  font-style: italic;
+  font-size: larger;
+  font-weight: bolder;
+  margin-left: 32%;
 }
-.log{
-    color:red;
-    font-style: italic;
-    font-size: larger;
-    font-weight: bolder;
+#num{
+  font-style: italic;
+  font-size: larger;
+  font-weight: bolder;
+  font-family: sans-serif;
 }
-nav ul{
-    display: flex;
-    justify-content: space-around;
-    list-style: none;
-    text-decoration: none;
+nav ul {
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  text-decoration: none;
+  color: black;
 }
-a:link{
-    text-decoration: none;
-    padding-left: 50px;
-    font-style:normal;
-    font-size: larger;
-    font-weight: bolder;
+
+a:link {
+  text-decoration: none;
+  padding-left: 50px;
+  font-style: normal;
+  font-size: larger;
+  font-weight: bolder;
+  color: black;
 }
 /* body {
    background-color: black;
     background-repeat: no-repeat;
     background-size: cover;
 } */
-#login{
-    border: solid black;
-    padding: 3%;
-    margin-left: 50%;
-    border-radius: 7%;
-    background-color: black;
-    color: white;
+#login {
+ width: 250px; 
+ max-width: 300px;
+ margin: 1em;
+ padding: 2em;
+ box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
+ border-radius: var(--border-radius);
+ background: #ffffff;
 }
-.section{
-    
-    color: white;
-    font-weight: bolder;
-    font-size: larger;
-    padding: 9%;
-    width: 220px;
+#createAccount{
+  width: 250px; 
+ max-width: 300px;
+ margin: 1em;
+ padding: 2em;
+ box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
+ border-radius: var(--border-radius);
+ background: #ffffff;
+}
+#login,.form__input,.form__button{
+  font: 500 1rem 'Quicksand',sans-serif;
+}
+.form > *:first-child{
+  margin-top: 0;
+}
+.form > *:last-child{
+  margin-bottom: 0;
+}
+.section {
+  color: white;
+  font-weight: bolder;
+  font-size: larger;
+  padding: 4%;
+  width: 220px;
 }
 
-#buttons{
-    display: flex;
-    width: 150px; 
+#buttons {
+  display: flex;
+  width: 150px;
 }
-#button1{
-    background-color: gray;
-    border-bottom-left-radius: 5%;
-    border-top-left-radius: 5%;
+#button1 {
+  background-color: gray;
+  border-bottom-left-radius: 5%;
+  border-top-left-radius: 5%;
+  border: none;
+  width: 150px;
+  padding: 8%;
+}
+#button2 {
+  background-color: gray;
+  border-bottom-right-radius: 5%;
+  border-top-right-radius: 5%;
+  border: none;
+  width: 150px;
+  padding: 8%;
+}
+#button1:hover {
+  background-color: white;
+  border: none;
+}
+#button2:hover {
+  background-color: white;
+  border: none;
+}
+#framework {
+  padding: 2%;
+  border: none;
+  width: 150px
+}
+#location{
+  padding: 2%;
+  border: none;
+  width: 150px;
+}
+#Price{
+  padding: 2%;
+  border: none;
+  width: 150px;
+}
+#search{
+  display: flex;
+  padding: 2%;
+  border: none;
+  width: 150px;
+}
+#input1{
+  padding: 2%;
+  border: none;
+  width: 150px;
+}
+#placeholder{
+  margin-left: 2%;
+border-radius: 5%;
+border: none;
+  width: 300px;
+  text-decoration: none;
+  padding: 3% 7% ;
+}
+#button3{
+  background-color: rgb(255, 238, 0);
+  border: none;
+  border-radius: 5%;
+  font-weight: bolder;
+  width: 150px;
+  margin-left: 50%;
+  padding: 5%;
+}
+#search-area{
+  display: flex;
+ 
+}
+#framework i.fa{
+  color: black;
+  
+}
+#container2{
+  display: flex;
+  justify-content: space-around;
+}
+#description{
+  text-align: center;
+
+}
+#description2{
+  display: flex;
+  justify-content: space-between;
+}
+#find-home{
+  border: rgb(192, 196, 188) ;
+  height: 35vh;
+  width: 50%;
+  padding-top: 2%;
+}
+#payment-methods{
+  border: rgb(192, 196, 188)  ;
+  height: 35vh;
+  width: 50%;
+  padding-top: 2%;
+  margin-left: 2%;
+}
+#makeItOfficial{
+  border: rgb(192, 196, 188)  ;
+  height: 35vh;
+  width: 46vw;
+  padding-top: 2%;
+  margin-left: 2%;
+  padding-bottom: 2%;
+}
+#properties{
+display: flex;
+width: 100%;
+}
+#house1-descr{
+  display: flex;
+  width: 250px;
+  align-self: center;
+  
+}
+#house2{
+  margin-left: 10%;
+}
+#house2-descr{
+  display: flex;
+  margin-bottom: 7%;
+}
+#house3{
+  margin-left: 10%;
+  padding-left: 8%;
+  padding-right: 8%;
+}
+#house3-descr{
+  display: flex;
+}
+.button4{
+  margin-right: 10%;
+  margin-top: 10%;
+  border: none;
+}
+#button4{
+  background-color: blue;
+  padding: 12%;
+  font-weight: bolder;
+  border-radius: 5%;
+  border: none;
+  width: 100px;
+}
+#testimonials{
+  text-align: center;
+}
+#testimonials p{
+  font-weight: bold;
+}
+#container4{
+  display: flex;
+
+}
+#customer1{
+  width:25%;
+}
+#customer2{
+  width: 25%;
+  margin-left: 1%;
+}
+#customer3{
+  width: 25%;
+  margin: 1%;
+}
+.button5{
+  margin-top: 10%;
+}
+#button5{
+  padding: 8%;
+  width: 100px;
+  background-color: rgb(239, 243, 28);
+  border: none;
+  border-radius: 5%;
+ font-weight: bolder;
+
+}
+
+.tab-content{
+  background-image: url(../images/image11.jpg); 
+  background-position: center;
+}
+[data-tab-content] {
+  display: none;
+}
+.active[data-tab-content]{
+  display: block;
+}
+.links{
+  padding: 12px;
+  font-size: 1.2em;
+  font-family: futura,mD,BT;
+  border: none;
+  outline: none;
+  width: 200px;
+  color: #fff;
+  transition: 0.3s;
+  background-color: plum;
+  display: flex;
+  flex-direction: column;
+
+}
+#ulAbout{
+  display: flex;
+  flex-direction: column;
+}
+#ulSeller{
+  display: flex;
+  flex-direction: column;
+}
+.list{
+  position:absolute ;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: 0.3s;
+}
+.list1{
+  position:absolute ;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: 0.3s;
+}
+.list2{
+  position:absolute ;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: 0.3s;
+  margin-top: 2%;
+}
+.Contact{
+  position:absolute ;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: 0.3s;
+  margin-top: 2%;
+  background-color: plum;
+  padding-left: 2%;
+}
+.newlist{
+transform: scale(1);
+
+}
+.newlist1{
+  transform: scale(1);
+}
+.newlist2{
+  transform: scale(1);
+}
+.newContact{
+  transform: scale(1);
+}
+.form__message{
+  text-align: center;
+  margin-bottom:1rem ;
+}
+.form__message-success{
+color: green;
+}
+.form__message-error{
+  color: red;
+  }
+  .form__input-group{
+margin-bottom:1rem ;
+  }
+  .form--input{
+    display: block;
+    width: 100%;
+    padding:0.75rem ;
+    box-sizing: border-box;
+    border-radius:3%;
+    border: 1px solid #dddddd;
+    outline: none;
+    inline-size: none;
+    background: #eeeeee;
+    transition: background 0.2s,border-color 0.2s;
+  }
+  .form__input:focus{
+    border-color: var(--color-primary);
+  }
+  .form_input-error-message{
+    margin-top: 4%;
+    font-size: larger;
+    color: red;
+  }
+  .form__button{
+    width: 100%;
+    padding: 4%;
+    font-weight: bold;
+    font-size: 1.1rem;
     border: none;
-    width: 150px;
-    padding: 8%;
-}
-#button2{
-    background-color: gray;
-    border-bottom-right-radius: 5%;
-    border-top-right-radius: 5%;
-    border: none;
-    width: 150px;
-    padding: 8%;
-}
-#button1:hover{
-    background-color: white;
-    border: none;
-}
-#button2:hover{
-    background-color: white;
-    border: none;
-}
-#framework{
-    padding: 3%;
-    border: none;
-}
+    border-radius: 4%;
+    outline:none ;
+    cursor: pointer;
+    background: rgb(31, 212, 173) ;
+  }
+  .form__button:hover{
+background-color: aquamarine;
+  }
+  .form__button:active{
+transform: scale(0.98);
+  }
+  .form-text{
+    text-align: center;
+  }
+  .form-link{
+    
+    text-decoration: none;
+    cursor: pointer;
+  }
+  .form-link:hover{
+   text-decoration: underline; 
+   
+  }
+  .form--hidden{
+    display: none;
+  }
