--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 }
 .header-container {
   display: flex;
+  padding: 20px;
   background-color:rgb(29, 25, 25);
   justify-content: space-around;
   align-items: center;
@@ -18,7 +19,7 @@
   font-size: larger;
   font-weight: bolder;
   margin-left:2%;
-  margin-bottom: 32%;
+  margin-bottom: 1%;
 }
 #num{
   font-style: italic;
@@ -28,7 +29,7 @@
 }
 nav ul {
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   list-style: none;
   text-decoration: none;
   color: rgb(57, 70, 57);
@@ -42,11 +43,10 @@ a:link {
   font-weight: bolder;
   color: black;
 }
-/* body {
-   background-color: black;
-    background-repeat: no-repeat;
-    background-size: cover;
-} */
+body {
+   background-color: rgb(250, 245, 245);
+   
+}
 #login {
  width: 250px; 
  max-width: 300px;
@@ -115,6 +115,10 @@ a:link {
   border: none;
   width: 150px
 }
+#framework input{
+  border: none;
+  outline: none;
+}
 #location{
   padding: 2%;
   border: none;
@@ -125,29 +129,49 @@ a:link {
   border: none;
   width: 150px;
 }
-#search{
+#container1{
+  width: 375px;
+  height: 520px;
+  background: #fff;
+  box-shadow: 4px 4px 30px rgb(0,0, 0,0.06);
+  
+}
+#container{
   display: flex;
   padding: 2%;
+  background: #fff;
   border: none;
-  width: 150px;
+  width: 380px;
+  height: 500px;
+  
+}
+.search form input{
+border: none;
+outline: none;
+box-shadow: none;
+width: 100%;
+font-size: 17px;
+font-weight: 600;
+
+}
+.product-list{
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.product img{
+width:70px;
 }
 #input1{
   padding: 2%;
   border: none;
   width: 150px;
 }
-#placeholder{
-  margin-left: 2%;
-border-radius: 5%;
-border: none;
-  width: 300px;
-  text-decoration: none;
-  padding: 3% 7% ;
-}
+
 #button3{
   background-color: rgb(255, 238, 0);
   border: none;
-  border-radius: 5%;
+  border-radius: 3%;
   font-weight: bolder;
   width: 150px;
   margin-left: 50%;
@@ -212,24 +236,25 @@ width: 100%;
   
 }
 #house2{
-  margin-left: 10%;
-  background-color: rgb(177, 219, 231);
+  /* margin-left: 10%; */
+  /* background-color: rgb(177, 219, 231); */
 }
 #house2-descr{
   display: flex;
   margin-bottom: 7%;
-  background-color: rgb(177, 219, 231);
+  /* background-color: rgb(177, 219, 231); */
 }
 #house3{
   margin-left: 10%;
+
   /* padding-left: 8%;
   padding-right: 8%; */
-  background-color: rgb(177, 219, 231);
+  /* background-color: rgb(177, 219, 231); */
 }
 #house3-descr{
   display: flex;
-  margin-bottom: 7%;
 }
+
 .button4{
   margin-right: 10%;
   margin-top: 10%;
@@ -238,11 +263,12 @@ width: 100%;
 #button4{
   background-color: yellow;
   padding: 12%;
-  margin-left: 25%;
+  margin-left: 100%;
   font-weight: bolder;
   border-radius: 5%;
   border: none;
   width: 100px;
+  cursor: pointer;
 }
 #testimonials{
   text-align: center;
@@ -264,6 +290,7 @@ width: 100%;
   background-color: rgb(177, 219, 231);
 }
 #customer3{
+  display: flex;
   width: 25%;
   margin: 1%;
   background-color: rgb(177, 219, 231);
@@ -284,6 +311,15 @@ width: 100%;
 .tab-content{
   background-image: url(../images/image11.jpg); 
   background-position: center;
+  background-size: cover;
+  height: 300px
+}
+.tab-content2{
+  background-image: url(../images/image11.jpg); 
+  background-position: center;
+  background-size: cover;
+  height: 300px;
+  width: 50%;
 }
 [data-tab-content] {
   display: none;
@@ -308,6 +344,7 @@ width: 100%;
 #ulAbout{
   display: flex;
   flex-direction: column;
+  margin-left: 50%;
 }
 #ulSeller{
   display: flex;
@@ -376,17 +413,17 @@ color: green;
 margin-bottom:1rem ;
   }
   
-  .form--input{
+  .form-input{
     display: block;
     width: 100%;
-    padding:0.75rem ;
+    padding:2%;
     box-sizing: border-box;
     border-radius:3%;
     border: 1px solid #dddddd;
     outline: none;
     inline-size: none;
     background: #eeeeee;
-    transition: background 0.2s,border-color 0.2s;
+    
   }
   .form__input:focus{
     border-color: var(--color-primary);
@@ -425,6 +462,19 @@ transform: scale(0.98);
    text-decoration: underline; 
    
   }
-  .form--hidden{
+  .login{
+    margin-left: 50%;
+  }
+  .imagecontainer{
     display: none;
+  }
+  #mainpage{
+    background: white;
+    font-size: larger;
+    padding: 8%;
+    box-shadow: none;
+    border-radius: 4%;
+    width: 250px;
+    font-weight: 600;
+    cursor: pointer;
   }
